<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_180sdp"
        android:src="@drawable/steptwo_success"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo"
        android:gravity="center"
        android:text="@string/steb2_tv2"
        android:textAlignment="center"
        android:textColor="#575757"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:textColor="#1C1C1C"
        android:text="@string/steb2_tv1"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_38sdp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/button_share"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />


</androidx.constraintlayout.widget.ConstraintLayout>